# blas

./: .clang-format  .gitignore  README.md  meson.build
include/: allocate_utils.h  bench.h  bench_utils.h  blas_types.h  error_messages.h  matrix_utils.h  test_utils.h  time_utils.h  vector_matrix_ops.h  vector_matrix_ops_bench.h  vector_matrix_ops_test.h  vector_ops.h  vector_ops_bench.h  vector_ops_test.h  vector_vector_ops.h  vector_vector_ops_bench.h  vector_vector_ops_test.h
src/: main.c
src/bench/: bench.c  vector_matrix_ops_bench.c  vector_ops_bench.c  vector_vector_ops_bench.c
src/ops/: vector_matrix_ops.c  vector_ops.c  vector_vector_ops.c
src/utils/: allocate_utils.c  bench_utils.c  blas_types.c  matrix_utils.c  test_utils.c  time_utils.c
test/: vector_matrix_ops_test.c  vector_ops_test.c  vector_vector_ops_test.c
